--- a/chatcontrol-bukkit/pom.xml
+++ b/chatcontrol-bukkit/pom.xml
@@ -59,8 +59,9 @@
 			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>mcMMO</artifactId>
 			<version>2.1.231</version>
-			<scope>provided</scope>
-		</dependency> 
+			<scope>system</scope>
+			<systemPath>${basedir}/library/mcMMO.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>org.mineacademy.plugin</groupId>
 			<artifactId>EssentialsX</artifactId>
